5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1815_2564.log
== SUBMITION (2019-06-12 13:55:09) 
-- CODE:
g1 = array(eval(input("Gols do time: ")))
g2 = array(eval(input("Gols do time adversario: ")))
v = zeros(3, dtype=int) #Cria um vetor com elementos nulos #Ex: zeros(4)  =  [0, 0, 0, 0]
va = 0					#Dtype indica que tipo de entrada no vetor, no caso serão inteiras, então dtype=int
vb = 0
e = 0                          #Função range cria uma sequência de numeros inteiros. 
for i in range(size(g1)): 		#Ex: range(6) = [0, 1, 2, 3, 4, 5, 6]
	a = g1 [i] #Atribuindo a ao elemento de g1 na posição i
	b = g2 [i] #Atribuindo b ao elemento de g2 na posição i
	
	#Verificando quem fez mais gols e consequentemente ganhou
	if (a > b): 
		va = va + 1
	elif (b > a):
		vb = vb + 1
	elif (a == b):
		e = e + 1
	#Atribuindo os valores no vetor nulo
	v [0] = va
	v [1] = e
	v [2] = vb

print(v)
-- EXECUTION TIME:
0.651886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 1, in <module>
    g1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:55:12) 
-- CODE:
g1 = array(eval(input("Gols do time: ")))
g2 = array(eval(input("Gols do time adversario: ")))
v = zeros(3, dtype=int) #Cria um vetor com elementos nulos #Ex: zeros(4)  =  [0, 0, 0, 0]
va = 0					#Dtype indica que tipo de entrada no vetor, no caso serão inteiras, então dtype=int
vb = 0
e = 0                          #Função range cria uma sequência de numeros inteiros. 
for i in range(size(g1)): 		#Ex: range(6) = [0, 1, 2, 3, 4, 5, 6]
	a = g1 [i] #Atribuindo a ao elemento de g1 na posição i
	b = g2 [i] #Atribuindo b ao elemento de g2 na posição i
	
	#Verificando quem fez mais gols e consequentemente ganhou
	if (a > b): 
		va = va + 1
	elif (b > a):
		vb = vb + 1
	elif (a == b):
		e = e + 1
	#Atribuindo os valores no vetor nulo
	v [0] = va
	v [1] = e
	v [2] = vb

print(v)
-- EXECUTION TIME:
0.924412
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 1, in <module>
    g1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:55:24) 
-- CODE:
g1 = array(eval(input("Gols do time: ")))
g2 = array(eval(input("Gols do time adversario: ")))
v = zeros(3, dtype=int) #Cria um vetor com elementos nulos #Ex: zeros(4)  =  [0, 0, 0, 0]
va = 0					#Dtype indica que tipo de entrada no vetor, no caso serão inteiras, então dtype=int
vb = 0
e = 0                          #Função range cria uma sequência de numeros inteiros. 
for i in range(size(g1)): 		#Ex: range(6) = [0, 1, 2, 3, 4, 5, 6]
	a = g1 [i] #Atribuindo a ao elemento de g1 na posição i
	b = g2 [i] #Atribuindo b ao elemento de g2 na posição i
	
	#Verificando quem fez mais gols e consequentemente ganhou
	if (a > b): 
		va = va + 1
	elif (b > a):
		vb = vb + 1
	elif (a == b):
		e = e + 1
	#Atribuindo os valores no vetor nulo
	v [0] = va
	v [1] = e
	v [2] = vb

print(v)
-- EXECUTION TIME:
0.988446
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 1, in <module>
    g1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:57:01) 
-- CODE:
g1 = array(eval(input("Gols do time: ")))
g2 = array(eval(input("Gols do time adversario: ")))
v = zeros(3, dtype=int) #Cria um vetor com elementos nulos #Ex: zeros(4)  =  [0, 0, 0, 0]
va = 0					#Dtype indica que tipo de entrada no vetor, no caso serão inteiras, então dtype=int
vb = 0
e = 0                          #Função range cria uma sequência de numeros inteiros. 
for i in range(size(g1)): 		#Ex: range(6) = [0, 1, 2, 3, 4, 5, 6]
	a = g1 [i] #Atribuindo a ao elemento de g1 na posição i
	b = g2 [i] #Atribuindo b ao elemento de g2 na posição i
	
	#Verificando quem fez mais gols e consequentemente ganhou
	if (a > b): 
		va = va + 1
	elif (b > a):
		vb = vb + 1
	elif (a == b):
		e = e + 1
	#Atribuindo os valores no vetor nulo
	v [0] = va
	v [1] = e
	v [2] = vb

print(v)
-- EXECUTION TIME:
1.20875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 1, in <module>
    g1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:58:31) 
-- CODE:
from numpy import *

g1 = array(eval(input("Gols do time: ")))
g2 = array(eval(input("Gols do time adversario: ")))
v = zeros(3, dtype=int) #Cria um vetor com elementos nulos #Ex: zeros(4)  =  [0, 0, 0, 0]
va = 0					#Dtype indica que tipo de entrada no vetor, no caso serão inteiras, então dtype=int
vb = 0
e = 0                          #Função range cria uma sequência de numeros inteiros. 
for i in range(size(g1)): 		#Ex: range(6) = [0, 1, 2, 3, 4, 5, 6]
	a = g1 [i] #Atribuindo a ao elemento de g1 na posição i
	b = g2 [i] #Atribuindo b ao elemento de g2 na posição i
	
	#Verificando quem fez mais gols e consequentemente ganhou
	if (a > b): 
		va = va + 1
	elif (b > a):
		vb = vb + 1
	elif (a == b):
		e = e + 1
	#Atribuindo os valores no vetor nulo
	v [0] = va
	v [1] = e
	v [2] = vb

print(v)
-- EXECUTION TIME:
0.962725
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:37:25) 
-- CODE:
from numpy import *

g1 = array(eval(input("Gols do time: ")))
g2 = array(eval(input("Gols do time adversario: ")))
v = zeros(3, dtype=int) #Cria um vetor com elementos nulos #Ex: zeros(4)  =  [0, 0, 0, 0]
va = 0					#Dtype indica que tipo de entrada no vetor, no caso serão inteiras, então dtype=int
vb = 0
e = 0                          #Função range cria uma sequência de numeros inteiros. 
for i in range(size(g1)): 		#Ex: range(6) = [0, 1, 2, 3, 4, 5, 6]
	a = g1 [i] #Atribuindo a ao elemento de g1 na posição i
	b = g2 [i] #Atribuindo b ao elemento de g2 na posição i
	
	#Verificando quem fez mais gols e consequentemente ganhou
	if (a > b): 
		va = va + 1
	elif (b > a):
		vb = vb + 1
	elif (a == b):
		e = e + 1
	#Atribuindo os valores no vetor nulo
	v [0] = va
	v [1] = e
	v [2] = vb

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
